--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-server-line"></i>
+            <i class="bx bx-bulb"></i>
             <h3><a href="">Iluminacion</a></h3>
           </div>
         </div>
@@ -183,7 +183,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-paint-roll"></i></div>
               <h4><a href="">Pintura</a></h4>
               <p>Encuentra con nosotros el color que le dará un toque distinto a tus espacios.</p>
             </div>
@@ -191,7 +191,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bx bx-bath"></i></div>
               <h4><a href="">Plomeria</a></h4>
               <p>Encuentra lo que requieres para dar el mantenimiento a tu hogar.</p>
             </div>
@@ -199,7 +199,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bx bx-bone"></i></div>
               <h4><a href="">Mascotas</a></h4>
               <p>Productos para el miembro especial de la familia.</p>
             </div>
