--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-wrench"></i></div>
               <h4><a href="">Herramientas</a></h4>
               <p>Las mejores en el mercado las encuentras con nosotros</p>
             </div>
