--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Hectorin<span>.</span>com</a></h1>
+      <h1 class="logo"><a href="index.html">Hectorin<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+        <!-- <ul> -->
+          <!-- <li class="active"><a href="index.html">Home</a></li> -->
           <!-- <li><a href="#about">About</a></li> -->
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <!-- <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a href="#team">Team</a></li> -->
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -63,9 +63,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a href="#contact">Contact</a></li>
-
-        </ul>
+          <!-- <li><a href="#contact">Contact</a></li> -->
+        <!-- </ul> -->
       </nav><!-- .nav-menu -->
 
       <a href="#services" class="get-started-btn scrollto">Con&oacute;cenos</a>
@@ -263,8 +262,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Check our Portfolio</p>
+          <!-- <h2>Portfolio</h2> -->
+          <p>Nuestros productos</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
