--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="nav-menu d-none d-lg-block">
+      <!-- <nav class="nav-menu d-none d-lg-block"> -->
         <!-- <ul> -->
           <!-- <li class="active"><a href="index.html">Home</a></li> -->
           <!-- <li><a href="#about">About</a></li> -->
@@ -65,7 +65,8 @@
           </li> -->
           <!-- <li><a href="#contact">Contact</a></li> -->
         <!-- </ul> -->
-      </nav><!-- .nav-menu -->
+      <!-- </nav> -->
+      <!-- .nav-menu -->
 
       <a href="#services" class="get-started-btn scrollto">Con&oacute;cenos</a>
 
@@ -159,7 +160,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>&Eacute;sto es algo de lo que podr&aacute;s encontrar con nosotros</h2>
+          <h2>&Eacute;sto encontrar&aacute;s con nosotros</h2>
           <p>En Ferreteria y Materiales Hectorin</p>
         </div>
 
